--- a/imc-app-ios/Base.lproj/Main.storyboard
+++ b/imc-app-ios/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="imc_app_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="8Zj-ZM-2Et">
@@ -21,16 +21,16 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="73" translatesAutoresizingMaskIntoConstraints="NO" id="nIO-Nq-mdS">
-                                <rect key="frame" x="20" y="207" width="374" height="489"/>
+                                <rect key="frame" x="20" y="251" width="374" height="465"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Qual sua altura?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1i-lf-3SW">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="38.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="14.333333333333334"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <color key="textColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="90" translatesAutoresizingMaskIntoConstraints="NO" id="PeQ-7K-qJj">
-                                        <rect key="frame" x="0.0" y="111.33333333333331" width="374" height="40"/>
+                                        <rect key="frame" x="0.0" y="87.333333333333314" width="374" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8IQ-n0-mXr">
                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -70,13 +70,13 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Qual seu peso?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yj1-qt-NyE">
-                                        <rect key="frame" x="0.0" y="224.33333333333331" width="374" height="28.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="200.33333333333331" width="374" height="28.666666666666657"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <color key="textColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="86" translatesAutoresizingMaskIntoConstraints="NO" id="9kn-aq-Bda">
-                                        <rect key="frame" x="0.0" y="326" width="374" height="40"/>
+                                        <rect key="frame" x="0.0" y="302" width="374" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k2Q-4v-064">
                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -121,7 +121,7 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5EH-85-COZ">
-                                        <rect key="frame" x="0.0" y="439" width="374" height="50"/>
+                                        <rect key="frame" x="0.0" y="415" width="374" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="VWU-cF-Dby"/>
                                         </constraints>
@@ -178,14 +178,14 @@
             <objects>
                 <viewController id="BrR-9D-MGj" customClass="ResultadoView" customModule="imc_app_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cwU-hB-1qB">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="qod-6k-R9A">
-                                <rect key="frame" x="20" y="20" width="386" height="178"/>
+                                <rect key="frame" x="20" y="64" width="386" height="154"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="90" translatesAutoresizingMaskIntoConstraints="NO" id="M4Z-kJ-MEv">
-                                <rect key="frame" x="20" y="208" width="386" height="488"/>
+                                <rect key="frame" x="20" y="228" width="386" height="488"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Resultado" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R5T-31-yo5">
                                         <rect key="frame" x="0.0" y="0.0" width="386" height="28"/>
@@ -261,7 +261,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="qxA-Fd-1i0"/>
+        <segue reference="DCe-Fx-cLT"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="logo" width="386" height="162"/>
