--- a/imc-app-ios/Base.lproj/Main.storyboard
+++ b/imc-app-ios/Base.lproj/Main.storyboard
@@ -13,24 +13,27 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="imc_app_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="8Zj-ZM-2Et">
                                 <rect key="frame" x="20" y="44" width="386" height="146"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="73" translatesAutoresizingMaskIntoConstraints="NO" id="nIO-Nq-mdS">
-                                <rect key="frame" x="20" y="251" width="374" height="465"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="71" translatesAutoresizingMaskIntoConstraints="NO" id="nIO-Nq-mdS">
+                                <rect key="frame" x="20" y="207" width="374" height="454"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Qual sua altura?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1i-lf-3SW">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="14.333333333333334"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Qual sua altura?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1i-lf-3SW">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="Z8H-dd-IyF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <color key="textColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="90" translatesAutoresizingMaskIntoConstraints="NO" id="PeQ-7K-qJj">
-                                        <rect key="frame" x="0.0" y="87.333333333333314" width="374" height="40"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="90" translatesAutoresizingMaskIntoConstraints="NO" id="PeQ-7K-qJj">
+                                        <rect key="frame" x="0.0" y="91" width="374" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8IQ-n0-mXr">
                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -68,15 +71,21 @@
                                                 </connections>
                                             </button>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="j2m-PG-jWn"/>
+                                        </constraints>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Qual seu peso?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yj1-qt-NyE">
-                                        <rect key="frame" x="0.0" y="200.33333333333331" width="374" height="28.666666666666657"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Qual seu peso?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yj1-qt-NyE">
+                                        <rect key="frame" x="0.0" y="202" width="374" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="9Ee-bq-oNK"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <color key="textColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="86" translatesAutoresizingMaskIntoConstraints="NO" id="9kn-aq-Bda">
-                                        <rect key="frame" x="0.0" y="302" width="374" height="40"/>
+                                        <rect key="frame" x="0.0" y="293" width="374" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k2Q-4v-064">
                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -85,6 +94,8 @@
                                                     <constraint firstAttribute="height" constant="40" id="LlS-XK-mZe"/>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="R7U-uH-Sa4"/>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="l9l-dC-Nbu"/>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="40" id="urQ-5s-CNv"/>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="40" id="zzg-aK-Sed"/>
                                                 </constraints>
                                                 <color key="tintColor" red="0.36470588240000001" green="0.47058823529999999" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="Button"/>
@@ -105,9 +116,11 @@
                                                 <rect key="frame" x="334" y="0.0" width="40" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="5Y1-aY-S9M"/>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="40" id="RRe-Fg-8y8"/>
                                                     <constraint firstAttribute="height" constant="40" id="f1a-No-lGf"/>
                                                     <constraint firstAttribute="width" constant="40" id="ju5-Bb-iwI"/>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="qi1-u7-MoL"/>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="40" id="zNw-uT-u7n"/>
                                                 </constraints>
                                                 <color key="tintColor" red="0.36470588240000001" green="0.47058823529999999" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="Button"/>
@@ -119,9 +132,12 @@
                                                 </connections>
                                             </button>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="D4V-VI-zq0"/>
+                                        </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5EH-85-COZ">
-                                        <rect key="frame" x="0.0" y="415" width="374" height="50"/>
+                                        <rect key="frame" x="0.0" y="404" width="374" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="VWU-cF-Dby"/>
                                         </constraints>
@@ -178,23 +194,23 @@
             <objects>
                 <viewController id="BrR-9D-MGj" customClass="ResultadoView" customModule="imc_app_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cwU-hB-1qB">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="qod-6k-R9A">
-                                <rect key="frame" x="20" y="64" width="374" height="154"/>
+                                <rect key="frame" x="20" y="20" width="386" height="178"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="90" translatesAutoresizingMaskIntoConstraints="NO" id="M4Z-kJ-MEv">
-                                <rect key="frame" x="20" y="228" width="374" height="488"/>
+                                <rect key="frame" x="20" y="208" width="386" height="488"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Resultado" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R5T-31-yo5">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="28"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="386" height="28"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <color key="textColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xjr-nT-srl">
-                                        <rect key="frame" x="0.0" y="118" width="374" height="70"/>
+                                        <rect key="frame" x="0.0" y="118" width="386" height="70"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="p2P-ad-qvr"/>
                                         </constraints>
@@ -203,7 +219,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2xS-8N-jyI">
-                                        <rect key="frame" x="0.0" y="278" width="374" height="70"/>
+                                        <rect key="frame" x="0.0" y="278" width="386" height="70"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="4XB-yd-Hyi"/>
                                         </constraints>
@@ -212,7 +228,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M9l-qS-3b5">
-                                        <rect key="frame" x="0.0" y="438" width="374" height="50"/>
+                                        <rect key="frame" x="0.0" y="438" width="386" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="375" id="w7b-yr-tCx"/>
                                             <constraint firstAttribute="height" constant="50" id="wgR-p0-T5k"/>
@@ -261,7 +277,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="DCe-Fx-cLT"/>
+        <segue reference="qxA-Fd-1i0"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="logo" width="386" height="162"/>
